--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js"
   },
-  "author": "Nikunj Pansuriya and Yug Shah",
+  "author": "Dhaval Rajpara, Yug Shah and Nikunj Pansuriya",
   "license": "ISC",
   "dependencies": {
     "@tensorflow/tfjs": "^1.7.2",
+    "@tensorflow/tfjs-vis": "^1.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -18,6 +19,7 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.0.4",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
